--- a/res/layout/singleitemview.xml
+++ b/res/layout/singleitemview.xml
@@ -111,7 +111,7 @@
      
     />
           
-        <TextView
+        <com.androidbegin.jsonparsetutorial.Coustxt	
         android:id="@+id/rank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
