--- a/res/layout/singleitemview.xml
+++ b/res/layout/singleitemview.xml
@@ -98,7 +98,7 @@
     
           
           
-            <com.androidbegin.jsonparsetutorial.Coustxt
+            <com.androidbegin.jsonparsetutorial.Newtxt
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,7 +111,7 @@
      
     />
           
-        <com.androidbegin.jsonparsetutorial.Coustxt	
+        <com.androidbegin.jsonparsetutorial.Newtxt
         android:id="@+id/rank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -140,7 +140,7 @@
         android:layout_margin="15dp" 
         android:layout_gravity="right"/>
 
-<com.androidbegin.jsonparsetutorial.Coustxt
+<com.androidbegin.jsonparsetutorial.Newtxt
     android:id="@+id/lin"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
